# SFML-game

./: AberrationFactory.cpp  AberrationFactory.h  Amulet.cpp  Amulet.h  Antidote.cpp  Antidote.h  Armor.cpp  Armor.h  Boss.cpp  Boss.h  CMakeLists.txt  Circense.cpp  Circense.h  Criminale.cpp  Criminale.h  Enemy.cpp  Enemy.h  Equipment.cpp  Equipment.h  EyeMedicine.cpp  EyeMedicine.h  Game.cpp  Game.h  Gear.cpp  Gear.h  Geniere.cpp  Geniere.h  HealthPotion.cpp  HealthPotion.h  HpPot.cpp  HpPot.h  Human.cpp  Human.h  InteractableObject.cpp  InteractableObject.h  Inventory.cpp  Inventory.h  Item.cpp  Item.h  Key.cpp  (+58 more)
assets/: fileList.txt
cmake_modules/: FindSFML.cmake
